# leptonica-rs

./: .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .markdownlintignore  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: cd.yml  ci.yml  release.yml
crates/leptonica-color/: Cargo.toml
crates/leptonica-core/: Cargo.toml
crates/leptonica-core/src/: error.rs  lib.rs
crates/leptonica-core/src/box_/: adjust.rs  draw.rs  geometry.rs  mod.rs  select.rs  serial.rs
crates/leptonica-core/src/colormap/: convert.rs  mod.rs  query.rs  serial.rs
crates/leptonica-core/src/fpix/: mod.rs  serial.rs
crates/leptonica-core/src/numa/: histogram.rs  interpolation.rs  mod.rs  operations.rs  serial.rs  sort.rs
crates/leptonica-core/src/pix/: access.rs  arith.rs  blend.rs  border.rs  clip.rs  compare.rs  convert.rs  extract.rs  graphics.rs  histogram.rs  mask.rs  measurement.rs  mod.rs  ops.rs  rgb.rs  rop.rs  serial.rs  statistics.rs
crates/leptonica-core/src/pixa/: mod.rs
crates/leptonica-core/src/pta/: lsf.rs  mod.rs  serial.rs  sort.rs  transform.rs
crates/leptonica-core/src/sarray/: mod.rs  serial.rs
crates/leptonica-core/tests/: boxa1_reg.rs  boxa2_reg.rs  boxa3_reg.rs  boxa4_reg.rs  boxfunc_reg.rs  compare_reg.rs  conversion_reg.rs  equal_reg.rs  extrema_reg.rs  fpix1_reg.rs  fpix2_reg.rs  insert_reg.rs  logicops_reg.rs  lowaccess_reg.rs  numa1_reg.rs  numa2_reg.rs  numa3_reg.rs  numa_sort_interp_reg.rs  overlap_reg.rs  pix_arith_rop_reg.rs  pix_clip_advanced_ext_reg.rs  pix_clip_advanced_reg.rs  pix_histogram_advanced_reg.rs  pix_stats_advanced_reg.rs  pixa1_reg.rs  pixa2_reg.rs  pixafunc_reg.rs  pixcomp_reg.rs  pixserial_reg.rs  pta_reg.rs  rasterop_reg.rs  rasteropip_reg.rs
crates/leptonica-doc/: Cargo.toml
crates/leptonica-filter/: Cargo.toml
crates/leptonica-filter/src/: adaptmap.rs  bilateral.rs  block_conv.rs  convolve.rs  edge.rs  enhance.rs  error.rs  kernel.rs  lib.rs  rank.rs  windowed.rs
crates/leptonica-filter/tests/: adaptmap_advanced_reg.rs  adaptmap_bg_reg.rs  adaptmap_morph_reg.rs  adaptmap_reg.rs  adaptnorm_reg.rs  bilateral1_reg.rs  bilateral2_reg.rs  bilateral_fast_reg.rs  compfilter_reg.rs  convolve_reg.rs  edge_reg.rs  enhance_reg.rs  extend_replication_reg.rs  extend_replication_test.rs  kernel_reg.rs  locminmax_reg.rs  lowsat_reg.rs  rank_reg.rs  rankbin_reg.rs  rankhisto_reg.rs
crates/leptonica-io/: Cargo.toml
crates/leptonica-io/src/: bmp.rs  error.rs  format.rs  gif.rs  header.rs  jp2k.rs  jpeg.rs  lib.rs  pdf.rs  png.rs  pnm.rs  spix.rs  tiff.rs  webp.rs
crates/leptonica-io/src/ps/: ascii85.rs  mod.rs
crates/leptonica-io/tests/: encoding_reg.rs  gifio_reg.rs  ioformats_reg.rs  iomisc_reg.rs  jp2kio_reg.rs  jpegio_reg.rs  mtiff_reg.rs  pdfio1_reg.rs  pdfio2_reg.rs  pdfseg_reg.rs  pixtile_reg.rs  pngio_reg.rs  pnmio_reg.rs  psio_reg.rs  psioseg_reg.rs  spixio_reg.rs  webpio_reg.rs
crates/leptonica-morph/: Cargo.toml
crates/leptonica-morph/src/: binary.rs  color.rs  dwa.rs  error.rs  grayscale.rs  lib.rs  morphapp.rs  sel.rs  sequence.rs  thin.rs  thin_sels.rs
crates/leptonica-morph/tests/: binmorph1_reg.rs  binmorph2_reg.rs  binmorph3_reg.rs  binmorph4_reg.rs  binmorph5_reg.rs  binmorph6_reg.rs  ccthin1_reg.rs  ccthin2_reg.rs  colormorph_reg.rs  dwamorph1_reg.rs  dwamorph2_reg.rs  fhmtauto_reg.rs  fmorphauto_reg.rs  graymorph1_reg.rs  graymorph2_reg.rs  morphseq_reg.rs  sel_morphapp_reg.rs  selio_reg.rs
crates/leptonica-recog/: Cargo.toml
crates/leptonica-recog/src/: baseline.rs  error.rs  flipdetect.rs  lib.rs  pageseg.rs  skew.rs
crates/leptonica-recog/src/barcode/: decode.rs  detect.rs  mod.rs  signal.rs  types.rs
crates/leptonica-recog/src/barcode/formats/: codabar.rs  code2of5.rs  code39.rs  code93.rs  codei2of5.rs  ean13.rs  mod.rs  upca.rs
crates/leptonica-recog/src/dewarp/: apply.rs  dewarpa.rs  io.rs  mod.rs  model.rs  single_page.rs  textline.rs  types.rs
crates/leptonica-recog/src/jbclass/: classify.rs  io.rs  mod.rs  types.rs
crates/leptonica-recog/src/recog/: bootstrap.rs  did.rs  ident.rs  io.rs  mod.rs  query.rs  train.rs  types.rs
crates/leptonica-recog/tests/: baseline_reg.rs  dewarp_reg.rs  findpattern1_reg.rs  findpattern2_reg.rs  flipdetect_reg.rs  italic_reg.rs  jbclass_reg.rs  lineremoval_reg.rs  newspaper_reg.rs  pageseg_reg.rs  partition_reg.rs  pixadisp_reg.rs  skew_reg.rs  wordboxes_reg.rs
crates/leptonica-region/: Cargo.toml
crates/leptonica-test/: Cargo.toml
crates/leptonica-test/src/: error.rs  lib.rs  params.rs
crates/leptonica-transform/: Cargo.toml
docs/plans/: 000_overall-plan.md  (+138 more)
examples/: compare_golden.rs  gen_c_manifest.rs  rotateorthpdf.rs
leptonica/: Cargo.toml
leptonica/src/: lib.rs
scripts/: audit-regression-tests.py  benchmark-regression-145.py  build_c_leptonica.sh  build_c_verify.sh  c_compat_exclude.tsv  c_verify_outputs.tsv  compare_graymorph2.c  diagnose_1bpp_polarity.py  diagnose_jpeg_diff.py  fix-markdown-lint.py  gen_c_manifest.sh  golden_map.tsv  phase3_find_hash_match_pairs.py  verify-comparison-counts.py  verify_apply_inv_bg.c  verify_bg_gray_map.c  verify_bg_rgb_map.c  verify_binmorph.c  verify_contrast_norm.c  verify_fhmtauto.c  verify_fillmapholes.c  verify_findbaselines.c  verify_gifio.c  verify_graymorph2.c  verify_inv_bg_map.c  verify_iomisc.c
src/: lib.rs
tests/: adaptmap_advanced_reg.rs  adaptmap_bg_reg.rs  adaptmap_morph_reg.rs  adaptmap_reg.rs  adaptnorm_reg.rs  affine_reg.rs  alphaops_reg.rs  alphaxform_reg.rs  baseline_reg.rs  bilateral1_reg.rs  bilateral2_reg.rs  bilinear_reg.rs  binarize_reg.rs  binmorph1_reg.rs  binmorph2_reg.rs  binmorph3_reg.rs  binmorph4_reg.rs  binmorph5_reg.rs  binmorph6_reg.rs  blackwhite_reg.rs  blend1_reg.rs  blend2_reg.rs  blend3_reg.rs  blend4_reg.rs  blend5_reg.rs  boxa1_reg.rs  boxa2_reg.rs  boxa3_reg.rs  boxa4_reg.rs  ccbord_reg.rs  ccthin1_reg.rs  ccthin2_reg.rs  cmapquant_reg.rs  colorcontent_advanced_reg.rs  colorcontent_reg.rs  colorfill_reg.rs  coloring_reg.rs  colorize_reg.rs  colormorph_reg.rs  colorquant_reg.rs  (+107 more)
(+620 files in other folders)
