[workspace]
resolver = "2"
members = [
    "crates/leptonica-core",
    "crates/leptonica-io",
    "crates/leptonica-morph",
    "crates/leptonica-transform",
    "crates/leptonica-filter",
    "crates/leptonica-color",
    "crates/leptonica-region",
    "crates/leptonica-doc",
    "crates/leptonica-recog",
    "crates/leptonica-test",
    "leptonica",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/tagawa/leptonica-rs"

[workspace.dependencies]
# Internal crates
leptonica-core = { path = "crates/leptonica-core", version = "0.1.0" }
leptonica-io = { path = "crates/leptonica-io", version = "0.1.0" }
leptonica-morph = { path = "crates/leptonica-morph", version = "0.1.0" }
leptonica-transform = { path = "crates/leptonica-transform", version = "0.1.0" }
leptonica-filter = { path = "crates/leptonica-filter", version = "0.1.0" }
leptonica-color = { path = "crates/leptonica-color", version = "0.1.0" }
leptonica-region = { path = "crates/leptonica-region", version = "0.1.0" }
leptonica-doc = { path = "crates/leptonica-doc", version = "0.1.0" }
leptonica-recog = { path = "crates/leptonica-recog", version = "0.1.0" }
leptonica-test = { path = "crates/leptonica-test", version = "0.1.0" }

# External dependencies
thiserror = "2.0.18"
image = "0.25.9"
png = "0.18.1"
jpeg-decoder = "0.3.2"
jpeg-encoder = "0.7.0"
tiff = "0.11.3"
gif = "0.14.1"
half = "2.7.1"
image-webp = "0.2.4"
hayro-jpeg2000 = "0.3.2"
pdf-writer = "0.14.0"
miniz_oxide = "0.9.0"
rand = "0.10.0"

[profile.dev]
opt-level = 1
