[package]
name = "leptonica"
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/tagawa/leptonica-rs"
description = "Rust port of Leptonica image processing library"

[dependencies]
thiserror = "2.0.18"
rand = "0.10.0"
png         = { version = "0.18.1", optional = true }
jpeg-decoder = { version = "0.3.2", optional = true }
jpeg-encoder = { version = "0.7.0", optional = true }
gif         = { version = "0.14.1", optional = true }
tiff        = { version = "0.11.3", optional = true }
half        = { version = "2.7.1", optional = true }
image-webp  = { version = "0.2.4", optional = true }
hayro-jpeg2000 = { version = "0.3.2", optional = true }
pdf-writer  = { version = "0.14.0", optional = true }
miniz_oxide = { version = "0.9.0", optional = true }

[features]
default = ["bmp", "pnm", "png-format", "jpeg", "tiff-format"]
bmp = []
pnm = []
png-format  = ["png"]
jpeg        = ["jpeg-decoder", "jpeg-encoder"]
gif-format  = ["gif"]
tiff-format = ["tiff", "half"]
webp-format = ["image-webp"]
jp2k-format = ["hayro-jpeg2000"]
pdf-format  = ["pdf-writer", "miniz_oxide"]
ps-format   = ["miniz_oxide"]
all-formats = ["bmp", "pnm", "png-format", "jpeg", "gif-format",
               "tiff-format", "webp-format", "jp2k-format",
               "pdf-format", "ps-format"]

[profile.dev]
opt-level = 1
