[package]
name = "leptonica-filter"
description = "Image filtering operations for Leptonica"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
leptonica-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
leptonica-io.workspace = true
leptonica-morph.workspace = true
leptonica-test.workspace = true
