[package]
name = "leptonica-io"
description = "Image I/O for Leptonica image processing library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
leptonica-core.workspace = true
leptonica-color = { workspace = true, optional = true }
thiserror.workspace = true

# Optional image format support
png = { workspace = true, optional = true }
jpeg-decoder = { workspace = true, optional = true }
jpeg-encoder = { workspace = true, optional = true }
gif = { workspace = true, optional = true }
tiff = { workspace = true, optional = true }
half = { workspace = true, optional = true }
image-webp = { workspace = true, optional = true }
hayro-jpeg2000 = { workspace = true, optional = true }
pdf-writer = { workspace = true, optional = true }
miniz_oxide = { workspace = true, optional = true }

[features]
default = ["bmp", "pnm", "png-format", "jpeg"]
bmp = []
pnm = []
png-format = ["png"]
jpeg = ["jpeg-decoder", "jpeg-encoder"]
gif-format = ["gif", "leptonica-color"]
tiff-format = ["tiff", "half"]
webp-format = ["image-webp"]
jp2k-format = ["hayro-jpeg2000"]
pdf-format = ["pdf-writer", "miniz_oxide"]
ps-format = ["miniz_oxide"]
all-formats = ["bmp", "pnm", "png-format", "jpeg", "gif-format", "tiff-format", "webp-format", "jp2k-format", "pdf-format", "ps-format"]

[dev-dependencies]
leptonica-test.workspace = true
