[package]
name = "leptonica-morph"
description = "Morphological operations for Leptonica image processing library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
leptonica-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
leptonica-io.workspace = true
leptonica-test.workspace = true
