[package]
name = "leptonica-recog"
description = "OCR preprocessing: skew detection, baseline detection, and page segmentation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
leptonica-core.workspace = true
leptonica-transform.workspace = true
leptonica-morph.workspace = true
leptonica-region.workspace = true
leptonica-color.workspace = true
thiserror.workspace = true
