[package]
name = "leptonica-test"
description = "Regression test framework for Leptonica image processing library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
leptonica-core.workspace = true
leptonica-io = { workspace = true, features = ["all-formats"] }
thiserror.workspace = true
